# easychange

./: .docker-compose.yaml  .gitignore  README.md  data.html  data_parser.py  docker-compose.yaml  explore.ipynb  pyproject.toml
app/db/: database.py
app/model/: schemas.py
app/src/: main.py
backend/: Dockerfile  alembic.ini
backend/app/: alembic.ini  main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 7c988fb94a4e_added_pairs_table.py
backend/app/db/: crud.py  database.py  models.py  utils.py
frontend/src/: App.js
frontend/src/UI/: Card.js
frontend/src/components/NewExpense/: ExpenseForm.js  NewExpense.js
frontend/src/components/UI/: Card.js
